--- a/week5/ml-w5.ipynb
+++ b/week5/ml-w5.ipynb
@@ -14,7 +14,7 @@
     "## Question 1\n",
     "Install Pipenv\n",
     "What's the version of pipenv you installed?\n",
-    "2024.0.1"
+    "- 2024.0.1"
    ]
   },
   {
@@ -79,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Question 3\n",
+    "## Question 3\n",
     "Let's use these models!\n",
     "\n",
     "Write a script for loading these models with pickle\n",
@@ -116,7 +116,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Question 4\n",
+    "## Question 4\n",
     "Now let's serve this model as a web service\n",
     "\n",
     "Install Flask and gunicorn (or waitress, if you're on Windows)\n",
@@ -136,7 +136,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Question 5\n",
+    "## Question 5\n",
     "Download the base image svizor/zoomcamp-model:3.11.5-slim. You can easily make it by using docker pull command.\n",
     "\n",
     "\n",
@@ -169,7 +169,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "# Question 6\n",
+    "## Question 6\n",
     "Let's run your docker container!\n",
     "\n",
     "week5nevin@np:~/GitHub/ml-zoomcamp/week5$ docker run -d -p 9696:9696 ml-week5:latest\n",
