--- a/week9/ml-hw9.ipynb
+++ b/week9/ml-hw9.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Homework 9\n",
+    "#  Homework - Week9\n",
     "In this homework, we'll deploy the Straight vs Curly Hair Type model we trained in week 8."
    ]
   },
