minor changes to hw10

--- a/week10/ml-hw10.ipynb
+++ b/week10/ml-hw10.ipynb
@@ -151,16 +151,15 @@
     "## Question 6\n",
     "Now let's create a deployment config (e.g. deployment.yaml):\n",
     "\n",
-    "Replace <Image>, <Memory>, <CPU>, <Port> with the correct values.\n",
-    "\n",
-    "- <Image>: Replaced with your Docker image zoomcamp-model:3.11.5-hw10.\n",
-    "- <Memory> (Limits): Set to \"128Mi\" as a reasonable upper limit.\n",
-    "- <CPU> (Limits): Set to \"200m\" to allow for moderate CPU usage.\n",
-    "- <Port>: Set to 9696 based on Docker container's exposed port.\n",
+    "- Image Replaced with your Docker image zoomcamp-model:3.11.5-hw10.\n",
+    "- Memory (Limits): Set to \"128Mi\" as a reasonable upper limit.\n",
+    "- CPU (Limits): Set to \"200m\" to allow for moderate CPU usage.\n",
+    "- Port Set to 9696 based on Docker container's exposed port.\n",
     "\n",
     "a219a6fb1916   zoomcamp-model:3.11.5-hw10            \"waitress-serve --li…\"   8 hours ago      Up 8 hours      0.0.0.0:9696->9696/tcp, :::9696->9696/tcp      \n",
     "                                                                                        cool_lovelace\n",
-    "What is the value for <Port>?\n",
+    "\n",
+    "- What is the value for Port?\n",
     "\n",
     "- 9696\n",
     "\n",
